--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,24 +1,49 @@
 <div class ="panel panel-default">
     <div class="panel-heading">
-        メッセージ一覧
+        <h4>メッセージ一覧</h4>
     </div>
     <div class="panel-body">
-    <% @messages.each do |message| %>
-      <span class="label label-info">
-        <%= message.name %>
-      </span>
-        <%= message.body %>
-      <br>
-    <% end %>
+        <table class="table table-hover">
+            <thead>
+             <tr>
+                <th class="col-sm-2">Name</th>
+                <th class="col-sm-8">Message</th>
+             </tr>
+            </thead>
+            <tbody>
+            <% @messages.each do |message| %>
+              <tr>
+                <td>
+                    <%= message.name %>
+                </td>
+                <td>
+                    <%= message.body %>
+                </td>
+             </tr>
+            <% end %>
+            </tbody>
+        </table>
+
     </div>
 </div>
 
-
-<%= form_for(@message) do |f| %>
- 名前：
- <%= f.text_field:name %>
- 
- 内容：
- <%= f.text_field:body %>
- <%= f.submit class:"btn btn-sm btn-primary"%>
+<%= form_for(@message, html:{class:"form-horizontal"}) do |f| %>
+    <div class ="form-group">
+        <label class="col-sm-2 control-label">Name：</label>
+        <div class="col-sm-6">
+            <%= f.text_field:name, class:"form-control",placeholder:"名前"%>
+        </div>
+    </div>
+    <div class ="form-group">
+        <label class="col-sm-2 control-label">Message：</label>
+        <div class="col-sm-10">
+            <%= f.text_area:body, class:"form-control", rows:"8",placeholder:"ここにメッセージを記載してください"%>
+            <p class="help-block">※1200文字以内でお願いします</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-4 col-sm-offset-2">
+            <%= f.submit class:"btn btn-sm btn-primary"%>
+        </div>
+    </div>
 <% end%>
