--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -38,7 +38,7 @@
         <label class="col-sm-2 control-label">Message：</label>
         <div class="col-sm-10">
             <%= f.text_area:body, class:"form-control", rows:"8",placeholder:"ここにメッセージを記載してください"%>
-            <p class="help-block">※1200文字以内でお願いします。</p>
+            <p class="help-block">※1200文字以内でお願いします</p>
         </div>
     </div>
     <div class="form-group">
