--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -24,12 +24,17 @@
         <label class="col-sm-2 control-label">Message：</label>
         <div class="col-sm-10">
             <%= f.text_area:body, class:"form-control", rows:"8",placeholder:"ここにメッセージを記載してください" %>
-            <p class="help-block">※30文字以内でお願いします</p>
+            <p class="help-block">※300文字以内でお願いします</p>
         </div>
     </div>
     <div class="form-group">
         <div class="col-sm-4 col-sm-offset-2">
             <%= f.submit class:"btn btn-sm btn-primary"%>
+            <% if @message.nil? %>
+                <%= "ここでは使えません" %>
+            <% else %>
+                <%= link_to "delete", @message , method: :delete, data: {confirm: '削除してよろしいですか？'} ,class:"btn btn-sm btn-danger" %>
+            <% end %>
         </div>
     </div>
 
