--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -16,8 +16,12 @@
 
     <div class ="form-group">
         <label class="col-sm-2 control-label">Name：</label>
-        <div class="col-sm-6">
+        <div class="col-sm-4">
             <%= f.text_field:name, class:"form-control",placeholder:"名前"%>
+        </div>
+        <label class="col-sm-1 control-label">Age:</label>
+        <div class="col-sm-2">
+            <%= f.number_field:age, class:"form-control"%>
         </div>
     </div>
     <div class ="form-group">
