--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,7 +9,8 @@
             <thead>
              <tr>
                 <th class="col-sm-2">Name</th>
-                <th class="col-sm-9">Message</th>
+                <th class="col-sm-1">age</th>
+                <th class="col-sm-8">Message</th>
                 <th class="col-sm-1">edit</th>
              </tr>
             </thead>
@@ -18,6 +19,9 @@
               <tr>
                 <td>
                     <%= message.name %>
+                </td>
+                <td>
+                    <%= message.age %>
                 </td>
                 <td>
                     <%= message.body %>
