--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -28,7 +28,7 @@
         <label class="col-sm-2 control-label">Message：</label>
         <div class="col-sm-10">
             <%= f.text_area:body, class:"form-control", rows:"8",placeholder:"ここにメッセージを記載してください" %>
-            <p class="help-block">※300文字以内でお願いします</p>
+            <p class="help-block">※300文字以内でお願いします。</p>
         </div>
     </div>
     <div class="form-group">
